Fix: detail page/reply form, align reply button centerly with textarea on tablet screen

--- a/src/pages/feedbacks/DetailPage/components/CommentList/replyForm.style.scss
+++ b/src/pages/feedbacks/DetailPage/components/CommentList/replyForm.style.scss
@@ -15,6 +15,10 @@
     min-width: 106px;
   }
 
+  &__form {
+    margin-bottom: 0;
+  }
+
   textarea {
     min-height: 80px;
     flex-grow: 1;
